@@ -62,7 +62,7 @@ public class ParserTest extends JAMWikiUnitTest {
 		// this topic has two interwiki links, but they both go to the same wikipedia page
 		ParserOutput parserOutput = new ParserOutput();
 		String parserResult = this.parserResult(parserOutput, "Interwiki1");
-		assertEquals("Interwiki1", 1, parserOutput.getInterwikiLinks().size());
+		assertEquals("Interwiki1", 2, parserOutput.getInterwikiLinks().size());
 		assertEquals("Interwiki1", "<a class=\"interwiki\" title=\"Wikipedia\" href=\"http://en.wikipedia.org/wiki/Main_Page\">Wikipedia</a>", parserOutput.getInterwikiLinks().get(0));
 	}
 
