@@ -12,3 +12,7 @@
 [[ : wikipedia : Main Page ]]
 
 [[Wikipedia]]
+
+[[jamwiki:]]
+
+[[:jamwiki:]]
